--- a/YupitergradBhaptics.csproj
+++ b/YupitergradBhaptics.csproj
@@ -29,10 +29,12 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
       <HintPath>..\..\..\..\..\GAMES\Yupitergrad - Dev\MelonLoader\0Harmony.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\..\..\..\GAMES\Yupitergrad - Dev\MelonLoader\Managed\Assembly-CSharp.dll</HintPath>
@@ -40,6 +42,10 @@
     </Reference>
     <Reference Include="Gamedust.Main">
       <HintPath>..\..\..\..\..\GAMES\Yupitergrad - Dev\MelonLoader\Managed\Gamedust.Main.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Il2Cppmscorlib">
+      <HintPath>..\..\..\..\..\GAMES\Yupitergrad - Dev\MelonLoader\Managed\Il2Cppmscorlib.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="MelonLoader">
@@ -54,6 +60,18 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="UnhollowerBaseLib">
+      <HintPath>..\..\..\..\..\GAMES\Yupitergrad - Dev\MelonLoader\Managed\UnhollowerBaseLib.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.CoreModule">
+      <HintPath>..\..\..\..\..\GAMES\Yupitergrad - Dev\MelonLoader\Managed\UnityEngine.CoreModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Zinnia.Runtime">
+      <HintPath>..\..\..\..\..\GAMES\Yupitergrad - Dev\MelonLoader\Managed\Zinnia.Runtime.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MyBhapticsTactsuit.cs" />
